--- a/css/master.css
+++ b/css/master.css
@@ -1,34 +1,55 @@
-#banner{
-  background: #ccc;
-}
+*{margin:0;padding:0}
+html{scroll-behavior: smooth;}
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
-#conteudo{
-  background: #f00;
-}
-
-.titulo{
+header{
+  background: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 50px;
   color: #fff;
+  padding: 20px 0;
+  position: absolute;
+}
+
+body{
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
+
+ul, a{
+  text-decoration: none;
+  color: #000;
+  list-style: none;
+  font-size: 16px;
+  position: relative;
+  display: flex;
+  padding: 5px 20px;
+  float: right;
+  margin: 0;
 }
 
 
+.container{
+  width: 994px;
+  margin: 0 auto;
+}
 
+.space{
+  margin: 0 0 40px 0;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+#banner{
+  width: 100%;
+  height: 600px;
+  background-size: cover;
+  background-position: bottom center;
+  background: url('../imgs/banner.png');
+}
 
 footer{
   background: #000;
+  width: 100%;
+  padding: 10px 0;
   color: #fff;
+  text-align: center;
 }
