--- a/css/master.css
+++ b/css/master.css
@@ -18,7 +18,7 @@ body{
 
 ul, a{
   text-decoration: none;
-  color: #000;
+  color: #fff;
   list-style: none;
   font-size: 16px;
   position: relative;
