--- a/css/master.css
+++ b/css/master.css
@@ -5,10 +5,8 @@ html{scroll-behavior: smooth;}
 header{
   background: rgba(0, 0, 0, 0.6);
   width: 100%;
-  height: 50px;
   color: #fff;
   padding: 20px 0;
-  position: absolute;
 }
 
 body{
@@ -16,16 +14,22 @@ body{
   font-size: 15px;
 }
 
-ul, a{
+.menu ul, li{
   text-decoration: none;
   color: #fff;
   list-style: none;
   font-size: 16px;
-  position: relative;
-  display: flex;
+  display: inline-block;
   padding: 5px 20px;
-  float: right;
   margin: 0;
+}
+
+.menu li:hover{
+  color: #09f;
+}
+
+a{
+  text-decoration: none;
 }
 
 
@@ -46,10 +50,35 @@ ul, a{
   background: url('../imgs/banner.png');
 }
 
+#mobile{
+  display: none;
+  padding-left: 15px;
+}
+
 footer{
   background: #000;
   width: 100%;
   padding: 10px 0;
   color: #fff;
   text-align: center;
+}
+
+@media screen and (max-width: 990px){
+
+  .container{
+    width: 100%;
+  }
+
+.menu ul li{
+  display: block;
+}
+
+.menu ul{
+  display: none;
+}
+
+#mobile{
+  display: block;
+}
+
 }
