--- a/css/master.css
+++ b/css/master.css
@@ -11,7 +11,8 @@ header{
 
 body{
   font-family: 'Roboto', sans-serif;
-  font-size: 15px;
+  font-size: 14px;
+  line-height: 20px;
 }
 
 .menu ul, li{
@@ -55,6 +56,65 @@ a{
   padding-left: 15px;
 }
 
+#servicos{
+  background: #000;
+  color: #fff;
+  text-align: center;
+}
+
+#contato{
+  background: #eee;
+  margin: 60px 0 0 0;
+}
+
+.titulo{
+  font-size: 22px;
+  text-transform: uppercase;
+  padding: 50px 0 0 0;
+}
+
+.subtitulo{
+  font-size: 16px;
+  color: #aaa;
+  text-transform: uppercase;
+  padding: 20px 0 0 0;
+}
+
+.button{
+  width: 150px;
+  background: #000;
+  color: #fff;
+  padding: 15px 20px;
+  margin: 15px 0 0 0;
+  border-left: 5px solid #f00;
+}
+
+.box{
+  width: 200px;
+  display: inline-block;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  padding: 12px;
+  margin: 5px;
+}
+
+.box h1{
+  font-size: 20px;
+  padding: 0 0 15px 0;
+}
+
+.box .fas{
+  font-size: 42px;
+  margin: 0 0 15px 0;
+}
+
+.campo{
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #000;
+  margin: 0 0 4px 0;
+}
+
 footer{
   background: #000;
   width: 100%;
@@ -65,7 +125,7 @@ footer{
 
 @media screen and (max-width: 990px){
 
-  .container{
+.container{
     width: 100%;
   }
 
