--- a/css/master.css
+++ b/css/master.css
@@ -3,7 +3,7 @@ html{scroll-behavior: smooth;}
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
 header{
-  background: rgba(0, 0, 0, 0.6);
+  background: #000;
   width: 100%;
   color: #fff;
   padding: 20px 0;
@@ -27,7 +27,8 @@ body{
 }
 
 .menu li:hover{
-  color: #09f;
+  color: #dd421e;
+  border-bottom: 2px solid #dd421e;
 }
 
 nav{
@@ -90,7 +91,7 @@ a{
   font-size: 16px;
   color: #aaa;
   text-transform: uppercase;
-  padding: 20px 0 10px 0;
+  padding: 20px 0 20px 0;
 }
 
 #image{
