--- a/css/master.css
+++ b/css/master.css
@@ -3,7 +3,7 @@ html{scroll-behavior: smooth;}
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
 header{
-  background: #000;
+  background: rgba(0, 0, 0, 0.8);
   width: 100%;
   color: #fff;
   padding: 20px 0;
