--- a/css/master.css
+++ b/css/master.css
@@ -1,6 +1,7 @@
-*{margin:0;padding:0}
-html{scroll-behavior: smooth;}
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+*{margin:0;padding:0}
+
+html{scroll-behavior: smooth;}
 
 header{
   background: rgba(0, 0, 0, 0.8);
@@ -8,6 +9,7 @@ header{
   color: #fff;
   padding: 20px 0;
   position: fixed;
+  overflow-x: hidden;
 }
 
 body{
@@ -32,17 +34,23 @@ body{
 }
 
 nav{
-  float: right;
+  float: left;
 }
 
+.menu .fas{
+  padding-right: 40px;
+  font-size: 40px;
+}
+
+
 #logo{
-  width: 4%;
+  width: 5%;
+  padding-left: 50px;
 }
 
 a{
   text-decoration: none;
 }
-
 
 .container{
   width: 994px;
@@ -67,6 +75,7 @@ a{
 }
 
 #servicos{
+  width: 100%;
   background: #000;
   color: #fff;
   text-align: center;
@@ -154,15 +163,11 @@ textarea{
   color: #fff;
 }
 
-/* .campo, h1{
-  color: #fff;
-} */
-
 #contato .subtitulo{
-    font-size: 16px;
-    color: #fff;
-    text-transform: uppercase;
-    padding: 20px 0 10px 0;
+  font-size: 16px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 20px 0 10px 0;
 }
 
 #enviar{
@@ -189,20 +194,87 @@ footer{
 
 @media screen and (max-width: 990px){
 
-.container{
+  header{
+    width: 100%;
+    overflow-x: hidden;
+  }
+
+  .container{
     width: 100%;
   }
 
-.menu ul li{
-  display: block;
+  .menu ul li{
+    display: inline-block;
+    padding: 20px 20px 0 10px;
+  }
+
+  .menu ul{
+    display: none;
+  }
+
+  .menu .fas{
+    padding: 8px 0 0 8px;
+    font-size: 40px;
+    position: relative;
+  }
+
+  #logo{
+    width: 8%;
+    float: right;
+    padding-right: 100px;
+  }
+
+  #image{
+    width: 200px;
+    height: 220px;
+    margin: 0 0 0 40px;
+    float: right;
+    background: url('../imgs/img1.png');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  #banner{
+    width: 100%;
+    height: 400px;
+    background-size: cover;
+    background-position: center;
+    background: url('../imgs/banner.png');
+  }
+
+
+  .campo{
+    padding: 15px 200px 15px 20px;
+    text-align: left;
+    border-radius: 4px;
+    border: 1px solid #000;
+    margin: 0 0 4px 0;
+    background: rgba(0, 0, 0, 0.8);
+  }
+
+  #mobile{
+    display: block;
+  }
+
 }
 
-.menu ul{
-  display: none;
-}
+@media screen and (max-width: 550px){
 
-#mobile{
-  display: block;
-}
+  #logo{
+    width: 10%;
+    float: right;
+    padding-right: 100px;
+  }
+
+  #mobile{
+    display: block;
+  }
+
+  .menu ul li{
+    display: block;
+    padding: 20px 20px 0 10px;
+  }
+
 
 }
